# EcoPaths

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yaml  docker-entrypoint.sh  dump.rdb  flowchart.md  jest.config.ts  kustomization.yaml  package-lock.json  package.json  playwright-test.sh  playwright.config.ts  setup.sh  tasks.py  tsconfig.json
backend/: .coveragerc  .env.example  .env.test  .env.test.example  .pylintrc  Dockerfile  README.md  init-db.sh  pyproject.toml  run_pipeline_compute.py  run_route_service.py  setup_databases.sh  tasks.py  test_compute_with_osm.py
backend/preprocessor/: edge_cleaner_sql.py  env_influence.py  green_cleaner_sql.py  green_influence.py  landuse_influence.py  node_builder.py  osm_downloader.py  osm_pipeline_runner.py  osm_preprocessing.py  osm_preprocessor.py  osm_validation.py  run_preprocessor.py  traffic_influence.py
backend/src/: README.md  app.py  example.py  main.py  test_main.py
backend/src/config/: columns.py  influence_weights.py  settings.py
backend/src/core/: compute_model.py  edge_enricher.py  edge_enrichment_model.py  osm_preprocessing.py  route_algorithm.py
backend/src/database/: db_client.py  db_connection.py  db_indexes.py  db_models.py
backend/src/db/: db_manager.py
backend/src/endpoints/: admin.py  areas.py  geocode.py  routes.py  static.py
backend/src/logger/: logger.py  logging_conf.py
backend/src/logging/: formatters.py  logging_conf.py
backend/src/services/: google_api_service.py  loop_route_service.py  redis_cache.py  redis_service.py  route_service.py
backend/src/utils/: address_suggestions.py  aqi_comparison_utils.py  decorators.py  exposure_calculator.py  geo_transformer.py  grid.py  poi_utils.py  (+3 more)
backend/tests/: test_example.py
(+200 files in other folders)
