[tool.poetry]
name = "ohtu-projekti-ecopaths"
version = "0.1.0"
description = "EcoPaths route planner"
authors = ["Laura Anttila <laura.anttila@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pylint = "^3.0"
coverage = "^7.4"
robotframework = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
