[tool.poetry]
name = "ecopaths-backend"
version = "0.1.0"
description = "EcoPaths route planner"
authors = ["ecoPaths-team"]

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
redis = "^6.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"
pylint = "^3.3.6"
autopep8 = "^2.3.2"
robotframework = "^7.0"
invoke = "^2.2.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
